<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:singleLine="false"
        android:text="@string/hello"
        android:textColor="#0099CC"
        android:textSize="40dp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btnScanBarCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scan" />

    <Button
        android:id="@+id/btnIndex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_index" />

</LinearLayout>